--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "array-move": "^3.0.1",
     "classnames": "^2.2.6",
     "faker": "^5.4.0",
+    "lodash": "^4.17.21",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "tailwindcss": "^2.0.3"
@@ -24,6 +25,7 @@
     "@types/chai": "^4.2.13",
     "@types/classnames": "^2.2.11",
     "@types/faker": "^5.1.7",
+    "@types/lodash": "^4.14.168",
     "@types/mocha": "^8.2.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
@@ -33,7 +35,7 @@
     "chai": "^4.2.0",
     "postcss": "^8.2.6",
     "postcss-cli": "^8.3.1",
-    "prettier": "^2.0.5",
+    "prettier": "2.2.1",
     "snowpack": "^3.0.1",
     "typescript": "^4.0.0"
   }
