--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "lint": "prettier --check \"src/**/*.{js,jsx,ts,tsx}\""
   },
   "dependencies": {
+    "@blueprintjs/core": "^3.42.0",
+    "@blueprintjs/datetime": "^3.22.0",
+    "@blueprintjs/icons": "^3.26.0",
+    "@blueprintjs/select": "^3.15.9",
     "array-move": "^3.0.1",
     "classnames": "^2.2.6",
     "faker": "^5.4.0",
